@@ -13,6 +13,7 @@
   * Rescuing Zlib::DataErrors (Thanks Kelley Reynolds)
   * Fixing a problem with frozen SSL objects.  RF #24950
   * Do not send a referer on meta refresh. RF #24945
+  * Fixed a bug with double semi-colons in Content-Disposition headers
 
 === 0.9.2 / 2009/03/05
 
